--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 
             <div class="social-media">
                 <a href="https://www.facebook.com/JhnPlMgn/"> <i class="fa-brands fa-facebook"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#"> <i class="fa-brands fa-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.instagram.com/jampol_magno/"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://twitter.com/japsmgn24"> <i class="fa-brands fa-twitter"></i></a>
+                <a href="https://github.com/JapsSwain"><i class="fa-brands fa-github"></i></a>
 
             </div>
            
