--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
       <section class="home" id="home">
         <div class="home-content">
-        <h3>Hello, I am</h3>
+        <h3>Hello, I'm</h3>
         <h1>John Paul A. Magno</h1>
         <p>Pursue your dreams to be success.</p>
 
